[tool.poetry]
name = "marl-book"
version = "0.1.0"
description = "My MARL studies with marl-book.com"
authors = ["Victor Severo <victor.severo.miranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gymnasium = "^0.29.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"
pandas = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
